--- a/dates/Makefile
+++ b/dates/Makefile
@@ -1,2 +1,11 @@
+PHONY: all
 all:
 	g++ -std=c++1z -o main main.cpp ./dateClass/Date.cpp
+
+PHONY: run
+run:
+	./main
+
+PHONE: clean
+clean:
+	rm main
